@startuml
'https://plantuml.com/class-diagram

!theme mars

class Cube {
    size: int
    front, back, left, right, up, down: Face
    reset()
    is_solved: bool
    is_sanity(): bool
}

class Face {
    name: FaceName
    color: Color
    center: Center
    edges: Edge[4]
    corners: Corner[4]
}

class Slice {
    name: SliceName
    M, E, S
}

abstract class Part {
    fixed_id: PartFixedID
    colors_id: PartColorsID
    all_slices: Iterator[PartSlice]
}

abstract class PartSlice {
    fixed_id
    colors_id
    parent: Part
}

abstract class PartEdge {
    color: Color
    face: Face
}

Part <|-- Edge
Part <|-- Corner
Part <|-- Center

Part *-- PartSlice

PartSlice <|-- EdgeWing
PartSlice <|-- CornerSlice
PartSlice <|-- CenterSlice


Cube *-- "6" Face: faces
Cube *-- "3" Slice: M, E, S

Face o-- "1" Center
Face o-- "4" Edge : shared
Face o-- "4" Corner : shared

note right of Face
  Parts are **shared**
  between adjacent faces.
  front.edge_top is up.edge_bottom
end note

Edge o-- "N-2" EdgeWing : slices
Corner o-- "1" CornerSlice : slice
Center o-- "(N-2)²" CenterSlice : grid

PartSlice *-- PartEdge

PartEdge <|-- WingFacet
PartEdge <|-- CornerSliceFacet
PartEdge <|-- CenterSliceFacet

EdgeWing o-- "2" WingFacet : facets
CornerSlice o-- "3" CornerSliceFacet : facets
CenterSlice o-- "1" CenterSliceFacet : facet

note bottom of Cube
  N = cube size
  Parts at FIXED positions
  Colors rotate, not parts
end note

@enduml
